Small name changes

--- a/templates/1.html
+++ b/templates/1.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h2>Zadanie 1</h2>
-    <form name="test" action="/test1" method="POST">
+    <form name="test" action="/zadanie_1" method="POST">
         <input type="submit" name="1" value="Send">
     </form>
 </body>
