--- a/templates/2.html
+++ b/templates/2.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h2>Zadanie 2</h2>
-    <form name="test" action="/test2" method="POST">
+    <form name="test" action="/zadanie_2" method="POST">
         Wprowadź liczby: <br>
         <label>
             <input type="text" name="2_1">
