--- a/templates/3.html
+++ b/templates/3.html
@@ -5,7 +5,7 @@
     <title>Zadanie 3</title>
 </head>
 <body>
-    <form name="test" action="/test3" method="POST">
+    <form name="test" action="/zadanie_3" method="POST">
         <h2>Zadanie 3</h2>
             <label>
                 <input type="text" name="3_1" value="{{ value }}">
