--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,8 @@
     <title>Formularz</title>
 </head>
 <body>
-    <a href="/load1">Zadanie 1</a>
-    <a href="/load2">Zadanie 2</a>
-    <a href="/load3">Zadanie 3</a>
+    <a href="/load_zadanie_1">Zadanie 1</a>
+    <a href="/load_zadanie_2">Zadanie 2</a>
+    <a href="/load_zadanie_3">Zadanie 3</a>
 </body>
 </html>
